--- a/onesoul_client/package.json
+++ b/onesoul_client/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "@nestjs/config": "^2.1.0",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-promise": "^0.5.29",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
